tests/fixtures/syntax/valid/stdout_contains_expectation.repor
case "stdout contains" {
  $ echo hello
  assert {
    stdout contains "hello"
  }
}
