tests/fixtures/syntax/invalid/string_literal_raw_newline.repor
case "raw newline in string" {
  $ true
  assert {
    stdout contains "line one
line two"
  }
}
